--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Трекер Улик</title>
 
-  <!-- 1) Вставь сюда свой конфиг перед модульными импортами
-  <script>
-    var __firebase_config = JSON.stringify({
-      apiKey: "…",
-      authDomain: "…",
-      projectId: "…",
-      appId: "…",
-    });
-    var __initial_auth_token = null; // или custom token строка
-    var __app_id = "my-evidence-tracker";
-  </script>
-  -->
+<script>
+  var __firebase_config = JSON.stringify({
+    apiKey: "AIzaSyABi8Le3nJgRtZJGgd6B54S16RNZr3qUbs",
+    authDomain: "defamquliki.firebaseapp.com",
+    projectId: "defamquliki",
+    storageBucket: "defamquliki.firebasestorage.app",
+    messagingSenderId: "443769403789",
+    appId: "1:443769403789:web:57b2b1241759e00f3ae5c4
+  });
+
+  // Можно оставить как есть
+  var __initial_auth_token = null;
+  var __app_id = "my-evidence-tracker";
+</script>
+
 
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -354,3 +357,4 @@
   </div>
 </body>
 </html>
+
