--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     apiKey: "AIzaSyABi8Le3nJgRtZJGgd6B54S16RNZr3qUbs",
     authDomain: "defamquliki.firebaseapp.com",
     projectId: "defamquliki",
-    storageBucket: "defamquliki.appspot.com",      // ← чаще всего так
+    storageBucket: "defamquliki.firebasestorage.app",      // ← чаще всего так
     messagingSenderId: "443769403789",
     appId: "1:443769403789:web:57b2b1241759e00f3ae5c4" // ← закрывающая кавычка!
   });
@@ -358,5 +358,6 @@
   </div>
 </body>
 </html>
+
 
 
