--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
           { name: 'Допрос от гос', purpose: 'Простая улика' },
           { name: 'Масскафф', purpose: 'Простая улика' },
           { name: 'Допрос DB / SID / SDB', purpose: 'Простая улика' },
+          { name: 'Инфо о складе', purpose: 'Простая улика' },
         ];
 
         const raidTarget = 4;
@@ -358,6 +359,7 @@
   </div>
 </body>
 </html>
+
 
 
 
