--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
 <body class="bg-amber-50 text-gray-800">
   <div class="container mx-auto p-4 sm:p-6 md:p-8 max-w-5xl">
     <header class="text-center mb-8">
-      <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Трекер Улик</h1>
-      <p class="mt-2 text-lg text-gray-600">Интерактивная доска для отслеживания улик против государственных фракций.</p>
+      <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Трекер Улик by DeFamq</h1>
+      <p class="mt-2 text-lg text-gray-600">Интерактивная доска для фиксации наличия улик против государственных фракций.</p>
     </header>
 
     <main>
@@ -359,6 +359,7 @@
   </div>
 </body>
 </html>
+
 
 
 
